--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -30,6 +30,7 @@ jobs:
           name: windows-dependencies
           path: |
             icu/icu4c/source/
+            icu/icu4c/source/bin
             SDL2/include
             SDL2/build
             SDL2_image/include
