--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -11,21 +11,22 @@ jobs:
 
       - run: ./runConfigureICU MSYS/MSVC
         working-directory: icu/icu4c/source
-      - run: msbuild source\allinone\allinone.sln /p:Configuration=Release /p:Platform=x64
-        working-directory: icu/icu4c/source
+      - name: Build ICU
+        run: msbuild source\allinone\allinone.sln /p:Configuration=Release /p:Platform=x64
+        working-directory: icu/icu4c
 
-      # Build SDL2
-      - run: ./configure; make; make install
+      - name: Build SDL2
+        run: ./configure; make; make install
         working-directory: SDL2
       
-      # Build SDL2_image
-      - run: ./configure; make; make install
+      - name: Build SDL2_image
+        run: ./configure; make; make install
         working-directory: SDL2_image
       
-      # Build SDL2_mixer
-      - run: ./configure; make; make install
+      - name: Build SDL2_mixer
+        run: ./configure; make; make install
         working-directory: SDL2_mixer
-      
+
       # Upload everything
       - uses: actions/upload-artifact@v4
         with:
