--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -13,15 +13,15 @@ jobs:
         working-directory: icu/icu4c/source
 
       # Build SDL2
-      - run: ./configure; make; make install
+      - run: ./configure; make
         working-directory: SDL2
       
       # Build SDL2_image
-      - run: ./configure; make; make install
+      - run: ./configure; make
         working-directory: SDL2_image
       
       # Build SDL2_mixer
-      - run: ./configure; make; make install
+      - run: ./configure; make
         working-directory: SDL2_mixer
       
       # Upload everything
