--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -16,15 +16,15 @@ jobs:
         working-directory: icu/icu4c
 
       - name: Build SDL2
-        run: ./configure; make; make install
+        run: ./configure; make
         working-directory: SDL2
       
       - name: Build SDL2_image
-        run: ./configure; make; make install
+        run: ./configure; make
         working-directory: SDL2_image
       
       - name: Build SDL2_mixer
-        run: ./configure; make; make install
+        run: ./configure; make
         working-directory: SDL2_mixer
 
       # Upload everything
