--- a/.github/workflows/mac.yml
+++ b/.github/workflows/mac.yml
@@ -19,7 +19,7 @@ jobs:
         working-directory: icu/icu4c/source
 
       - name: Build SDL2
-        run: ./configure; make
+        run: ./configure; make; make install
         working-directory: SDL2
       
       - name: Build SDL2_image
