--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -17,14 +17,17 @@ jobs:
 
       - name: Build SDL2
         run: ./configure; make
+        shell: bash
         working-directory: SDL2
       
       - name: Build SDL2_image
         run: ./configure; make
+        shell: bash
         working-directory: SDL2_image
       
       - name: Build SDL2_mixer
         run: ./configure; make
+        shell: bash
         working-directory: SDL2_mixer
 
       # Upload everything
