--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -15,19 +15,25 @@ jobs:
         run: msbuild source\allinone\allinone.sln /p:Configuration=Release /p:Platform=x64
         working-directory: icu/icu4c
 
-      - name: Build SDL2
-        run: ./configure; make
-        shell: bash
+      - run: ./configure
         working-directory: SDL2
-      
-      - name: Build SDL2_image
-        run: ./configure; make
         shell: bash
+      - name: Build SDL2
+        run: make
+        working-directory: SDL2
+
+      - run: ./configure
         working-directory: SDL2_image
-      
-      - name: Build SDL2_mixer
-        run: ./configure; make
         shell: bash
+      - name: Build SDL2_image
+        run: make
+        working-directory: SDL2_image
+
+      - run: ./configure
+        working-directory: SDL2_mixer
+        shell: bash
+      - name: Build SDL2_mixer
+        run: make
         working-directory: SDL2_mixer
 
       # Upload everything
