--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -9,22 +9,20 @@ jobs:
       - name: Add msbuild to PATH
         uses: microsoft/setup-msbuild@v2
 
-      - run: ./runConfigureICU MSYS/MSVC
-        working-directory: icu/icu4c/source
       - name: Build ICU
-        run: msbuild source\allinone\allinone.sln /p:Configuration=Release /p:Platform=x64
+        run: msbuild source\allinone\allinone.sln /p:Configuration=Release /p:Platform=x64 /p:PlatformToolset=v143
         working-directory: icu/icu4c
 
       - name: Build SDL2
-        run: msbuild VisualC/SDL.sln /p:Configuration=Release /p:Platform=x64
+        run: msbuild VisualC/SDL.sln /p:Configuration=Release /p:Platform=x64 /p:PlatformToolset=v143
         working-directory: SDL2
 
       - name: Build SDL2_image
-        run: msbuild VisualC/SDL_image.sln /p:Configuration=Release /p:Platform=x64
+        run: msbuild VisualC/SDL_image.sln /p:Configuration=Release /p:Platform=x64 /p:PlatformToolset=v143
         working-directory: SDL2_image
 
       - name: Build SDL2_mixer
-        run: msbuild VisualC/SDL_mixer.sln /p:Configuration=Release /p:Platform=x64
+        run: msbuild VisualC/SDL_mixer.sln /p:Configuration=Release /p:Platform=x64 /p:PlatformToolset=v143
         working-directory: SDL2_mixer
 
       # Upload everything
