linux SDL2_image builds to different dir

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -34,6 +34,6 @@ jobs:
             SDL2/include
             SDL2/build
             SDL2_image/include
-            SDL2_image/build
+            SDL2_image/.libs
             SDL2_mixer/include
             SDL2_mixer/build
