--- a/.github/workflows/mac.yml
+++ b/.github/workflows/mac.yml
@@ -36,7 +36,7 @@ jobs:
           name: mac-dependencies
           path: |
             icu/icu4c/source/
-            icu/icu4c/source/bin
+            icu/icu4c/include/
             SDL2/include
             SDL2/build
             SDL2_image/include
