make install icu on linux/mac to generate include dir

--- a/.github/workflows/mac.yml
+++ b/.github/workflows/mac.yml
@@ -17,6 +17,9 @@ jobs:
       - name: Build ICU
         run: gmake
         working-directory: icu/icu4c/source
+      - name: Build ICU include directories
+        run: gmake install --prefix=$(pwd)
+        working-directory: icu/icu4c
       - run: ls -R
         working-directory: icu/icu4c
 
