--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -11,6 +11,9 @@ jobs:
         working-directory: icu/icu4c/source
       - run: make
         working-directory: icu/icu4c/source
+      - name: Build ICU include directories
+        run: make install --prefix=$(pwd)
+        working-directory: icu/icu4c
 
       - run: ls -R
         working-directory: icu/icu4c
