--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -7,7 +7,7 @@ jobs:
       - uses: actions/checkout@v4
       
       # Build ICU
-      - run: ./runConfigureICU Linux --prefix=../
+      - run: ./runConfigureICU Linux --prefix=$(pwd)/../
         working-directory: icu/icu4c/source
       - run: make
         working-directory: icu/icu4c/source
