--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -6,28 +6,26 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       
-      # Build ICU
-      - run: ./runConfigureICU Linux --prefix=$(pwd)/../
+      - name: Configure ICU
+        run: ./runConfigureICU Linux --prefix=$(pwd)/../
         working-directory: icu/icu4c/source
-      - run: make
+      - name: Build ICU
+        run: make
         working-directory: icu/icu4c/source
       - name: Build ICU include directories
         run: make install
         working-directory: icu/icu4c
 
-      - run: ls -R
-        working-directory: icu/icu4c
-
-      # Build SDL2
-      - run: ./configure; make; sudo make install
+      - name: Build SDL2
+        run: ./configure; make; sudo make install
         working-directory: SDL2
       
-      # Build SDL2_image
-      - run: ./configure; make
+      - name: Build SDL2_image
+        run: ./configure; make
         working-directory: SDL2_image
 
-      # Build SDL2_mixer
-      - run: ./configure; make
+      - name: Build SDL2_mixer
+        run: ./configure; make
         working-directory: SDL2_mixer
       
       # Upload everything
