--- a/.github/workflows/mac.yml
+++ b/.github/workflows/mac.yml
@@ -19,7 +19,7 @@ jobs:
         working-directory: icu/icu4c/source
       - name: Build ICU include directories
         run: gmake install
-        working-directory: icu/icu4c
+        working-directory: icu/icu4c/source
 
       - name: Build SDL2
         run: ./configure; make; make install
