--- a/.github/workflows/mac.yml
+++ b/.github/workflows/mac.yml
@@ -12,7 +12,7 @@ jobs:
       - run: brew install automake
 
       - name: Configure ICU
-        run: ./runConfigureICU MacOSX --prefix=$(pwd)/../
+        run: ./runConfigureICU MacOSX --with-library-bits=64 --prefix=$(pwd)/../
         working-directory: icu/icu4c/source
       - name: Build ICU
         run: gmake
