--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -7,10 +7,10 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Configure ICU
-        run: ./runConfigureICU Linux --with-library-bits=64 --prefix=$(pwd)/../
+        run: ./runConfigureICU Linux --enable-static --with-library-bits=64 --prefix=$(pwd)/../
         working-directory: icu/icu4c/source
       - name: Build ICU
-        run: make --enable-static
+        run: make
         working-directory: icu/icu4c/source
       - name: Build ICU include directories
         run: make install
