--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -17,15 +17,15 @@ jobs:
         working-directory: icu/icu4c/source
 
       - name: Build SDL2
-        run: ./configure; make; sudo make install
+        run: ./configure --prefix=$(pwd)/../; make; make install
         working-directory: SDL2
-      
+
       - name: Build SDL2_image
-        run: ./configure; make
+        run: ./configure --prefix=$(pwd)/../; make; make install
         working-directory: SDL2_image
 
       - name: Build SDL2_mixer
-        run: ./configure; make
+        run: ./configure --prefix=$(pwd)/../; make; make install
         working-directory: SDL2_mixer
 
       # Put everything important in include/ and lib/
