--- a/.github/workflows/mac.yml
+++ b/.github/workflows/mac.yml
@@ -7,12 +7,12 @@ jobs:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v4
-      
+
       - run: brew install make
       - run: brew install automake
 
       - name: Configure ICU
-        run: ./runConfigureICU MacOSX --with-library-bits=64 --prefix=$(pwd)/../
+        run: ./runConfigureICU MacOSX --with-library-bits=64 --prefix=$(pwd)/../../../
         working-directory: icu/icu4c/source
       - name: Build ICU
         run: gmake
@@ -22,24 +22,16 @@ jobs:
         working-directory: icu/icu4c/source
 
       - name: Build SDL2
-        run: ./configure; make; make install
+        run: ./configure --prefix=$(pwd)/../; make; make install
         working-directory: SDL2
-      
+
       - name: Build SDL2_image
-        run: ./configure; make
+        run: ./configure --prefix=$(pwd)/../; make; make install
         working-directory: SDL2_image
 
       - name: Build SDL2_mixer
-        run: ./configure; make
+        run: ./configure --prefix=$(pwd)/../; make; make install
         working-directory: SDL2_mixer
-
-      # Put everything important in include/ and lib/
-      - run: mkdir include; mkdir lib
-      - run: mv **/include/* include/
-      - run: mv **/build/.libs/*.dylib lib/
-      - run: mv **/.libs/*.dylib lib/
-      - run: mv icu/icu4c/include/* include/
-      - run: mv icu/icu4c/lib/* lib/
 
       # Upload everything
       - uses: actions/upload-artifact@v4
