--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -7,7 +7,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Configure ICU
-        run: ./runConfigureICU Linux --enable-static --with-library-bits=64 --prefix=$(pwd)/../../../
+        run: ./runConfigureICU Linux --enable-static --prefix=$(pwd)/../../../
         working-directory: icu/icu4c/source
       - name: Build ICU
         run: make
