--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -7,7 +7,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Configure ICU
-        run: ./runConfigureICU Linux --enable-static --prefix=$(pwd)/../../../
+        run: ./runConfigureICU Linux --enable-static --with-library-bits=64 --prefix=$(pwd)/../../../
         working-directory: icu/icu4c/source
       - name: Build ICU
         run: make
@@ -17,15 +17,15 @@ jobs:
         working-directory: icu/icu4c/source
 
       - name: Build SDL2
-        run: ./configure --prefix=$(pwd)/../; make; make install
+        run: CXXFLAGS=-m64 ./configure --prefix=$(pwd)/../; make; make install
         working-directory: SDL2
 
       - name: Build SDL2_image
-        run: ./configure --prefix=$(pwd)/../; make; make install
+        run: CXXFLAGS=-m64 ./configure --prefix=$(pwd)/../; make; make install
         working-directory: SDL2_image
 
       - name: Build SDL2_mixer
-        run: ./configure --prefix=$(pwd)/../; make; make install
+        run: CXXFLAGS=-m64 ./configure --prefix=$(pwd)/../; make; make install
         working-directory: SDL2_mixer
 
       # Upload everything
