--- a/.github/workflows/mac.yml
+++ b/.github/workflows/mac.yml
@@ -1,7 +1,18 @@
 name: Mac build
-on: [push]
+on:
+  push:
+    branches:
+      - "*"
+    tags:
+      - "v*.*.*"
 env:
   MACOSX_DEPLOYMENT_TARGET: 10.13
+matrix:
+  arch:
+  - name: intel
+    flag: x86_64
+  - name: silicon
+    flag: arm64
 jobs:
   build:
     runs-on: macos-latest
@@ -33,10 +44,18 @@ jobs:
         run: ./configure --prefix=$(pwd)/../; make; make install
         working-directory: SDL2_mixer
 
-      # Upload everything
+      # Zip
+      - run: zip -r asciilib-dependencies-mac-${{ matrix.arch.name }}.zip include lib
+
+      # Upload everything as artifact
       - uses: actions/upload-artifact@v4
         with:
-          name: mac-dependencies
-          path: |
-            include
-            lib
+          name: mac-${{ matrix.arch.name }}-dependencies
+          path: asciilib-dependencies-mac-${{ matrix.arch.name }}.zip
+
+      # If tagged, upload a release
+      - name: Github release
+        uses: softprops/action-gh-release@v2
+        with:
+          files: asciilib-dependencies-mac-${{ matrix.arch.name }}.zip
+        if: ${{ startsWith(github.ref, 'refs/tags/') }}
