--- a/.github/workflows/mac.yml
+++ b/.github/workflows/mac.yml
@@ -37,15 +37,15 @@ jobs:
         working-directory: icu/icu4c/source
 
       - name: Build SDL2
-        run: ./configure --prefix=$(pwd)/../ --enable-cxx-flags="-arch ${{ matrix.arch.flag }}"; make; make install
+        run: ./configure CXXFLAGS="-arch ${{ matrix.arch.flag }}" --prefix=$(pwd)/../; make; make install
         working-directory: SDL2
 
       - name: Build SDL2_image
-        run: ./configure --prefix=$(pwd)/../ --enable-cxx-flags="-arch ${{ matrix.arch.flag }}"; make; make install
+        run: ./configure CXXFLAGS="-arch ${{ matrix.arch.flag }}" --prefix=$(pwd)/../ ; make; make install
         working-directory: SDL2_image
 
       - name: Build SDL2_mixer
-        run: ./configure --prefix=$(pwd)/../ --enable-cxx-flags="-arch ${{ matrix.arch.flag }}"; make; make install
+        run: ./configure CXXFLAGS="-arch ${{ matrix.arch.flag }}" --prefix=$(pwd)/../; make; make install
         working-directory: SDL2_mixer
 
       # Zip
