--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -55,7 +55,7 @@ jobs:
         shell: bash
 
       # Zip
-      - run: Compress-Archive -Path @(include lib) -Destination asciilib-dependencies-windows.zip
+      - run: Compress-Archive -Path 'include','lib' -Destination asciilib-dependencies-windows.zip
 
       # Upload everything
       - uses: actions/upload-artifact@v4
