--- a/.github/workflows/mac.yml
+++ b/.github/workflows/mac.yml
@@ -27,7 +27,7 @@ jobs:
       - run: brew install automake
 
       - name: Configure ICU
-        run: CXXFLAGS="-arch ${{ matrix.arch.flag }}" ./runConfigureICU MacOSX --with-library-bits=64 --prefix=$(pwd)/../../../
+        run: ./runConfigureICU MacOSX --with-library-bits=64 --prefix=$(pwd)/../../../
         working-directory: icu/icu4c/source
       - name: Build ICU
         run: gmake
@@ -37,15 +37,15 @@ jobs:
         working-directory: icu/icu4c/source
 
       - name: Build SDL2
-        run: ./configure CXXFLAGS="-arch ${{ matrix.arch.flag }}" --prefix=$(pwd)/../; make; make install
+        run: ./configure --prefix=$(pwd)/../; make; make install
         working-directory: SDL2
 
       - name: Build SDL2_image
-        run: ./configure CXXFLAGS="-arch ${{ matrix.arch.flag }}" --prefix=$(pwd)/../ ; make; make install
+        run: ./configure --prefix=$(pwd)/../ ; make; make install
         working-directory: SDL2_image
 
       - name: Build SDL2_mixer
-        run: ./configure CXXFLAGS="-arch ${{ matrix.arch.flag }}" --prefix=$(pwd)/../; make; make install
+        run: ./configure --prefix=$(pwd)/../; make; make install
         working-directory: SDL2_mixer
 
       # Zip
