try github.tag_name

--- a/.github/workflows/mac-universal.yml
+++ b/.github/workflows/mac-universal.yml
@@ -9,7 +9,7 @@ jobs:
       # Download macos-intel
       - uses: robinraju/release-downloader@v1
         with:
-          tag: ${{release.tag_name}}
+          tag: ${{github.tag_name}}
           fileName: 'asciilib-dependencies-mac-intel.zip'
           zipBall: true
           extract: true
