--- a/.github/workflows/mac-universal.yml
+++ b/.github/workflows/mac-universal.yml
@@ -17,7 +17,7 @@ jobs:
       # Download macos-silicon
       - uses: robinraju/release-downloader@v1
         with:
-          tag: ${{release.tag_name}}
+          tag: ${{github.tag_name}}
           fileName: 'asciilib-dependencies-mac-silicon.zip'
           zipBall: true
           extract: true
