universal build checkout

--- a/.github/workflows/mac-universal.yml
+++ b/.github/workflows/mac-universal.yml
@@ -22,6 +22,7 @@ jobs:
           zipBall: true
           extract: true
 
+      - uses: actions/checkout@v4
       - run: ./make-universal.sh
 
       # Zip
