--- a/.github/workflows/mac-universal.yml
+++ b/.github/workflows/mac-universal.yml
@@ -40,7 +40,7 @@ jobs:
           name: mac-universal-dependencies
           path: asciilib-dependencies-mac-universal.zip
 
-      upload a release
+      # upload a release
       - name: Github release
         uses: softprops/action-gh-release@v2
         with:
